Fix: menu items are now visible when we hover over them

--- a/gtk/src/default/gtk-3.20/_tweaks.scss
+++ b/gtk/src/default/gtk-3.20/_tweaks.scss
@@ -152,8 +152,8 @@ menu,
   menuitem {
 
     &:hover {
-      color: $fg_color;
-      background-color: $popover_hover_color;
+      color: $menu_hover_fg_color;
+      background-color: $menu_hover_bg_color;
     }
   }
 }
@@ -163,8 +163,8 @@ menubar,
 .menubar {
   > menuitem {
     &:hover {
-      color: $fg_color;
-      background-color: $popover_hover_color;
+      color: $menu_hover_fg_color;
+      background-color: $menu_hover_bg_color;
     }
   }
 }
